--- a/main_project/src/index.html
+++ b/main_project/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
@@ -10,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-  
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -23,11 +24,13 @@
     }
   </script>-->
 
+  <!-- <script src="js/socket.io-1.2.0.js"></script> -->
   <link href="build/main.css" rel="stylesheet">
 
 </head>
-<body>
 
+<body>
+  <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
@@ -38,4 +41,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
