--- a/main_project/src/pages/login/login.html
+++ b/main_project/src/pages/login/login.html
@@ -5,7 +5,7 @@
 </ion-header>
 <ion-content padding>
 
-  <iframe src="http://mobilelab.woobi.co.kr/xe/index.php?mid=page_XTfb51&module_srl=149" id="ionic_login"></iframe>
+  <iframe src="http://mobilelab.woobi.co.kr/xe/index.php?mid=page_XTfb51&module_srl=149" id="ionic_login" name="LoginBoard" ></iframe>
 
   <button ion-button (click) = "goAppPage()" >Go Next</button>
 
