--- a/main_project/src/pages/page2/page2.html
+++ b/main_project/src/pages/page2/page2.html
@@ -3,12 +3,12 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Page Two</ion-title>
+    <ion-title>사진 공유</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <iframe src="http://mobilelab.woobi.co.kr/xe/board_picture" id="ionic_board"> </iframe>
+  <iframe src="http://mobilelab.woobi.co.kr/xe/mBoard" id="ionic_board" width=100% height=100%> </iframe>
   <!-- <div *ngIf="selectedItem" padding>
     You navigated here from <b>{{selectedItem.title}}</b>
   </div> -->
