--- a/main_project/src/pages/page1/page1.html
+++ b/main_project/src/pages/page1/page1.html
@@ -1,15 +1,17 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
+    <button ion-button secondary menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Page One</ion-title>
+    <ion-title>Together App</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <button ion-button secondary menuToggle>
+    <ion-icon name="menu"> Menu 보기</ion-icon>
+  </button>
+  <!-- <iframe src="http://mobilelab.woobi.co.kr/xe/index.php?mid=page_OcUa41" id="ionic_board"> </iframe> -->
 
-  
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 
 </ion-content>
