--- a/main_project/src/pages/page3/page3.html
+++ b/main_project/src/pages/page3/page3.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-navbar no-border-bottom>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>
-      ETC
+      추가기능
     </ion-title>
   </ion-navbar>
 
