--- a/main_project/src/pages/page3/page3.html
+++ b/main_project/src/pages/page3/page3.html
@@ -1,10 +1,7 @@
 <ion-header>
   <ion-navbar no-border-bottom>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>
-      추가기능
+      추가 정보
     </ion-title>
   </ion-navbar>
 
@@ -13,13 +10,13 @@
       <ion-segment-button value="recommend"  (click) = "goNewView()">
         장소 추천
       </ion-segment-button>
-      <ion-segment-button value="calendar" (click) = "goNewView2()">
+      <ion-segment-button value="calendar">
         여행 날짜등록
       </ion-segment-button>
-      <ion-segment-button value="contact"(click) = "goNewView3()">
+      <ion-segment-button value="contact">
         전화번호부
       </ion-segment-button>
-      <ion-segment-button value="kakao">
+      <ion-segment-button value="kakao" (click) = "goNewView4()">
         카카오
       </ion-segment-button>
     </ion-segment>
@@ -29,27 +26,50 @@
 <ion-content>
   <div [ngSwitch]="etc">
    <ion-item *ngSwitchCase="'calendar'">
-
+     <ion-card  ion-item *ngFor="let cal of calenlist">
+    <img src={{cal.img}}/>
+    <!-- <div class="card-title">{{cal.title}}</div>
+    <div class="card-subtitle">{{cal.city}} and {{city.day}}</div> -->
+    <div class="card-title">{{cal.title}}</div>
+    <div class="card-subtitle">{{cal.day}}Day</div>
+  </ion-card>
+     <button ion-button block	color ="secondary" clear	(click) = "goNewView2()">
+       <ion-icon	name='contact'>날짜 등록하기</ion-icon>
+     </button>
    </ion-item>
 
    <ion-item *ngSwitchCase="'recommend'">
      <button ion-item *ngFor="let weather of weatherList">
+       <ion-thumbnail item-left>
+         <img src="{{'http://openweathermap.org/img/w/'+weather.weather[0].icon+'.png'}}"	height=100}}>
+       </ion-thumbnail>
            <h2>도시이름: {{weather.name}}</h2>
-           <h2>날씨: {{weather.main.temp}}</h2>
+           <h4>날씨: {{weather.main.temp}}  습도: {{weather.main.humidity}} 바람세기: {{weather.wind.speed}}</h4>
      </button>
-     <h1>
-       <!-- <ion-thumbnail item-left>
-         <img src="{{'http://openweathermap.org/img/w/'+bestresult.weather[0]icon+'.png'}}"	height=100}}>
-       </ion-thumbnail> -->
-       놀러가기좋은도시{{bestresult.name}}
-     </h1>
+     <ion-item ion-label>
+       놀러가기좋은도시: {{bestresult.name}}
+        <button ion-button icon-only item-right (click) = "infor()">
+            <ion-icon name='alert'></ion-icon>
+          </button>
+    </ion-item>
    </ion-item>
 
    <ion-item *ngSwitchCase="'contact'">
+     <!-- <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar> -->
+     <button ion-item *ngFor="let c of contactlist" (click)="contectconnection(c.pnumber)">
+           <h2>이름: {{c.name}}</h2>
+           <h2>번호: {{c.pnumber}}</h2>
+     </button>
+     <button ion-button block clear (click) = "goNewView3()">
+       <ion-icon	name='contact'>번호등록</ion-icon>
+      </button>
+      <p>
+      </p>
+      <button ion-button block	color ="secondary" clear	(click) = "pickcontact()">
+        <ion-icon	name='contact'>전체번호 보기</ion-icon>
+      </button>
    </ion-item>
 
-   <ion-item *ngSwitchCase="'kakao'">
-   </ion-item>
  </div>
   <!-- <button (click) = "goNewView()">일기예보</button>
   <button (click) = "goNewView2()">켈린더테스트</button>
