fixed minor bug

--- a/main_project/src/pages/page1/page1.html
+++ b/main_project/src/pages/page1/page1.html
@@ -10,6 +10,7 @@
 <ion-content padding>
   <button ion-button secondary menuToggle>
     <ion-icon name="menu"> Menu 보기</ion-icon>
+    <div #map id="map"></div>
   </button>
   <!-- <iframe src="http://mobilelab.woobi.co.kr/xe/index.php?mid=page_OcUa41" id="ionic_board"> </iframe> -->
 
