--- a/main_project/src/pages/contact/contact.html
+++ b/main_project/src/pages/contact/contact.html
@@ -29,6 +29,30 @@
     <ion-label stacked>번호</ion-label>
       <ion-input type='text' [(ngModel)]='data.phonenumber'></ion-input>
   </ion-item>
+  <ion-item>
+  <ion-label stacked>종류</ion-label>
+  <ion-select [(ngModel)]='data.type'>
+    <ion-option value='restaurant'>식당</ion-option>
+    <ion-option value='home'>숙박업소</ion-option>
+    <ion-option value='logo-instagram'>관광지</ion-option>
+    <ion-option value='people'>친구</ion-option>
+</ion-select>
+</ion-item>
+<ion-item>
+  <ion-label stacked>메모사항</ion-label>
+  <ion-input type="text" [(ngModel)]='data.memo'></ion-input>
+</ion-item>
+<ion-item>
+<ion-label stacked>별점</ion-label>
+<ion-select [(ngModel)]='data.star'>
+  <ion-option value='★'>★</ion-option>
+  <ion-option value='★★'>★★</ion-option>
+  <ion-option value='★★★'>★★★</ion-option>
+  <ion-option value='★★★★'>★★★★</ion-option>
+  <ion-option value='★★★★★'>★★★★★</ion-option>
+</ion-select>
+</ion-item>
+
 </ion-list>
 <button ion-button block (click)="plus()">번호등록</button>
 
