Ver1.01 - solve the name mismatch

--- a/main_project/src/pages/calendar/calendar.html
+++ b/main_project/src/pages/calendar/calendar.html
@@ -32,9 +32,9 @@
   <ion-item>
   <ion-label stacked>테마</ion-label>
   <ion-select [(ngModel)]='data.type'>
-    <ion-option value='bacpack'>배낭여행!</ion-option>
+    <ion-option value='backpack'>배낭여행!</ion-option>
     <ion-option value='flower'>벚꽃놀이!</ion-option>
-    <ion-option value='mountin'>산으로!</ion-option>
+    <ion-option value='mountain'>산으로!</ion-option>
     <ion-option value='paris'>해외여행!</ion-option>
     <ion-option value='sea'>바다여행!</ion-option>
     <ion-option value='ski'>스키장!</ion-option>
