--- a/main_project/src/pages/page1/page1.html
+++ b/main_project/src/pages/page1/page1.html
@@ -7,12 +7,12 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+  <ion-tabs color="light">
+    <ion-tab [root]="tab1Root" tabTitle="Map" tabIcon="navigate"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="List" tabIcon="list"></ion-tab>
+  </ion-tabs>
   <button ion-button secondary menuToggle>
     <ion-icon name="menu"> Menu 보기</ion-icon>
-    <div #map id="map"></div>
   </button>
-  <!-- <iframe src="http://mobilelab.woobi.co.kr/xe/index.php?mid=page_OcUa41" id="ionic_board"> </iframe> -->
-
-
 </ion-content>
