--- a/main_project/src/pages/map/map.html
+++ b/main_project/src/pages/map/map.html
@@ -8,11 +8,16 @@
 </ion-header>
 
 <ion-content>
+  <button ion-button icon-only (click)="plus()">
+    <ion-icon name="star"></ion-icon>
+  </button>
 
   <div #pleaseConnect id="please-connect">
     <p>Please connect to the Internet...</p>
   </div>
 
-  <div #map id="map"></div>
+  <div #map id="map">
+
+  </div>
 
 </ion-content>
