Ver 1.30 add highlight function

--- a/main_project/src/pages/page1/page1.html
+++ b/main_project/src/pages/page1/page1.html
@@ -12,7 +12,7 @@
     <ion-tab [root]="tab1Root" tabTitle="Map" tabIcon="navigate"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="List" tabIcon="list"></ion-tab>
   </ion-tabs>
-  <button ion-button secondary menuToggle>
+  <!-- <button ion-button secondary menuToggle>
     <ion-icon name="menu"> Menu 보기</ion-icon>
-  </button>
+  </button> -->
 </ion-content>
