--- a/main_project/src/pages/map/map.html
+++ b/main_project/src/pages/map/map.html
@@ -8,9 +8,9 @@
 </ion-header>
 
 <ion-content>
-  <button ion-button icon-only (click)="plus()">
+  <!-- <button ion-button icon-only (click)="plus()">
     <ion-icon name="star"></ion-icon>
-  </button>
+  </button> -->
 
   <div #pleaseConnect id="please-connect">
     <p>Please connect to the Internet...</p>
