--- a/main_project/src/pages/map/map.html
+++ b/main_project/src/pages/map/map.html
@@ -16,8 +16,6 @@
     <p>Please connect to the Internet...</p>
   </div>
 
-  <div #map id="map">
-
-  </div>
+  <div #map id="map"> </div>
 
 </ion-content>
