--- a/main_project/src/index.html
+++ b/main_project/src/index.html
@@ -34,7 +34,7 @@
   <ion-app></ion-app>
 
   <!-- Google Map Connect -->
-  <script src="http://maps.googleapis.com/maps/api/js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB7sPE8TM5lF2v8KAiwilvOqE3nuCzyoGk"></script>
   <script src="cordova.js"></script>
 
   <!-- The polyfills js is generated during the build process -->
