--- a/main_project/src/pages/page3/page3.html
+++ b/main_project/src/pages/page3/page3.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-navbar no-border-bottom>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>
       추가 기능
     </ion-title>
@@ -7,7 +10,7 @@
 
   <ion-toolbar no-border-top>
     <ion-segment [(ngModel)]="etc">
-      <ion-segment-button value="recommend"  (click) = "goNewView()">
+      <ion-segment-button value="recommend" (click)="goNewView()">
         장소 추천
       </ion-segment-button>
       <ion-segment-button value="calendar">
@@ -16,7 +19,7 @@
       <ion-segment-button value="contact">
         전화번호부
       </ion-segment-button>
-      <ion-segment-button value="kakao" (click) = "goNewView4()">
+      <ion-segment-button value="kakao" (click)="goNewView4()">
         카카오
       </ion-segment-button>
     </ion-segment>
@@ -25,50 +28,50 @@
 
 <ion-content>
   <div [ngSwitch]="etc">
-   <ion-item *ngSwitchCase="'calendar'">
-     <ion-card  ion-item *ngFor="let cal of calenlist">
-    <img src={{cal.img}}/>
-    <!-- <div class="card-title">{{cal.title}}</div>
+    <ion-item *ngSwitchCase="'calendar'">
+      <ion-card ion-item *ngFor="let cal of calenlist">
+        <img src={{cal.img}}/>
+        <!-- <div class="card-title">{{cal.title}}</div>
     <div class="card-subtitle">{{cal.city}} and {{city.day}}</div> -->
-    <div class="card-title">{{cal.title}}</div>
-    <div class="card-subtitle">{{cal.day}}Day</div>
-  </ion-card>
-     <button ion-button block	color ="secondary" clear	(click) = "goNewView2()">
+        <div class="card-title">{{cal.title}}</div>
+        <div class="card-subtitle">{{cal.day}}Day</div>
+      </ion-card>
+      <button ion-button block color="secondary" clear (click)="goNewView2()">
        <ion-icon	name='calendar'>날짜 등록하기</ion-icon>
      </button>
-   </ion-item>
+    </ion-item>
 
-   <ion-item *ngSwitchCase="'recommend'">
-     <button ion-item *ngFor="let weather of weatherList">
+    <ion-item *ngSwitchCase="'recommend'">
+      <button ion-item *ngFor="let weather of weatherList">
        <ion-thumbnail item-left>
          <img src="{{'http://openweathermap.org/img/w/'+weather.weather[0].icon+'.png'}}"	height=100}}>
        </ion-thumbnail>
            <h2>도시이름: {{weather.name}}</h2>
            <h4>날씨: {{weather.main.temp}}  습도: {{weather.main.humidity}} 바람세기: {{weather.wind.speed}}</h4>
      </button>
-     <ion-item ion-label>
-       놀러가기좋은도시: {{bestresult.name}}
-        <button ion-button icon-only item-right (click) = "infor()">
+      <ion-item ion-label>
+        놀러가기좋은도시: {{bestresult.name}}
+        <button ion-button icon-only item-right (click)="infor()">
             <ion-icon name='alert'></ion-icon>
           </button>
+      </ion-item>
     </ion-item>
-   </ion-item>
 
-   <ion-item *ngSwitchCase="'contact'">
-     <button ion-item *ngFor="let c of contactlist" (click)="contectconnection(c)">
+    <ion-item *ngSwitchCase="'contact'">
+      <button ion-item *ngFor="let c of contactlist" (click)="contectconnection(c)">
         <h4><ion-icon name={{c.typename}}></ion-icon>{{c.name}}</h4><h4> Tel: {{c.pnumber}}</h4>
      </button>
-     <button ion-button block clear (click) = "goNewView3()">
+      <button ion-button block clear (click)="goNewView3()">
        <ion-icon	name='contact'>번호등록</ion-icon>
       </button>
       <p>
       </p>
-      <button ion-button block	color ="secondary" clear	(click) = "pickcontact()">
+      <button ion-button block color="secondary" clear (click)="pickcontact()">
         <ion-icon	name='contact'>전체번호 보기</ion-icon>
       </button>
-   </ion-item>
+    </ion-item>
 
- </div>
+  </div>
   <!-- <button (click) = "goNewView()">일기예보</button>
   <button (click) = "goNewView2()">켈린더테스트</button>
   <button (click) = "goNewView3()">알림</button>
