--- a/main_project/src/pages/list/list.html
+++ b/main_project/src/pages/list/list.html
@@ -1,7 +1,11 @@
 <ion-header>
 
   <ion-navbar color="secondary">
-    <ion-title>List</ion-title>
+    <ion-title>List
+      <button ion-button icon-only (click)="showprompt()" item-right>
+        <ion-icon name='add'></ion-icon>
+      </button>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -10,13 +14,13 @@
 <ion-content>
 
   <ion-list no-lines>
-    <ion-item *ngFor="let location of locations.data">
-      <ion-avatar item-left>
-        <ion-icon name="pin"></ion-icon>
-      </ion-avatar>
-      <h2>{{location.title}}</h2>
-      <p>{{location.distance}} miles</p>
-    </ion-item>
+    <button ion-item *ngFor="let m of maplist" (click)="searchmap(m)">
+            <ion-avatar item-left>
+                <ion-icon name="pin"></ion-icon>
+            </ion-avatar>
+            <h2>{{m.location}}</h2>
+            <p>{{m.memo}}</p>
+          </button>
   </ion-list>
 
 </ion-content>
